fixed bug with serie updates.

--- a/project/templates/main/serie.html
+++ b/project/templates/main/serie.html
@@ -26,7 +26,7 @@
                     <div>
                         {% if serie.coment_serie is not none and serie.coment_serie|trim != "" %}
                             <h4>Comentario</h4>
-                            <p class="indented"> {{ serie.coment_serie }}</p>
+                            <p class="skinny text-center center-block"> {{ serie.coment_serie }}</p>
                             <br>
                         {% endif %}
                     </div>
