--- a/project/templates/user/activate.html
+++ b/project/templates/user/activate.html
@@ -1,4 +1,4 @@
-<p>¡Bienvenido! Gracias por registrarte. Siga este enlace para activar su cuenta::</p>
-<p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
+<p>¡Bienvenido! Gracias por registrarte. Siga
+    <a href="{{ confirm_url }}"> este enlace para activar su cuenta</a></p>
 <br>
 <p>¡Aclamaciones!</p>
