--- a/project/templates/errors/429.html
+++ b/project/templates/errors/429.html
@@ -2,8 +2,8 @@
 {% block body %}
 <div class="text-center">
     <br><br><br>
-    <h1>401</h1>
-    <p>No autorizado, No tienes permiso para acceder a esta página.</p>
+    <h1>429</h1>
+    <p>Algo salió mal</p>
     <p><em>Vuelve a <a class="underline" href="{{url_for('main.searchhome')}}">inicio</a></em></p>
 </div>
 {% endblock %}
