--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -42,6 +42,14 @@
         {% block css %}{% endblock %}
     </head>
     <body data-bodyview="index" class="default">
+		<customhtml></customhtml>
+		<div class="loading" data-loading="page">
+			<div class="loading_animation pulsing <%= extra_class %> "><div>
+                          </div>
+                        </div>
+                </div>
+
+
 
     <!-- Modal -->
     <div class="modal fade" id="confirm-modal" role="dialog">
@@ -86,7 +94,8 @@
     </div>
 
         {% include 'includes/_navbar.html' %}
-
+        <div id="backdrop" data-view="Backdrop" data-set="Backdrop">
+        </div>
         <div class="container center-block" style="width: 80%;">
 
             <!-- messages -->
