--- a/project/templates/user/register.html
+++ b/project/templates/user/register.html
@@ -34,7 +34,9 @@
             <div class="form-group">
               {{render_field(form.confirm, class ="form-control")}}
             </div>
-            <br>
+         {# <br>
+        {{ form.recaptcha }}
+            <br> #}
             <p>
             <input type="submit" class="btn btn-primary" value="Enviar"></p>
             <hr>
