author comments fix

--- a/project/templates/main/autor.html
+++ b/project/templates/main/autor.html
@@ -33,7 +33,7 @@
         {% endif %}
         </div>
         <div>
-            {% if autor.coment_part is not none and au %}
+            {% if autor.coment_part is not none %}
                 <h4>Sobre el Autor</h4>
                 <h3 class="indented">{{ autor.coment_part }}</h3>
                 <br>
