--- a/project/templates/user/admin.html
+++ b/project/templates/user/admin.html
@@ -58,7 +58,7 @@
                                     <select class="form-control ajax-permission"
                                             data-id="{{ entry.usuario_id }}">
                                         {{ render_select('Editor', entry.permiso) }}
-                                        {{ render_select('Moderador', entry.permiso) }}
+                                        {{ render_select('Mod', entry.permiso) }}
                                     </select>
                                 </td>
                                 <td>
